# ChangeLog for app-vim/cvsmenu
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-vim/cvsmenu/ChangeLog,v 1.7 2004/09/03 01:49:37 ciaranm Exp $

  03 Sep 2004; Ciaran McCreesh <ciaranm@gentoo.org> cvsmenu-1.80.ebuild:
  Help text, bug #62559

  16 Mar 2004; David Holm <dholm@gentoo.org> cvsmenu-1.80.ebuild:
  Added to ~ppc.

  23 Jan 2004; Aron Griffis <agriffis@gentoo.org> cvsmenu-1.80.ebuild:
  stable on alpha and ia64

  03 Dec 2003; Ciaran McCreesh <ciaranm@gentoo.org> cvsmenu-1.80.ebuild:
  Moved to stable on x86 and sparc

  15 Nov 2003; Aron Griffis <agriffis@gentoo.org> metadata.xml:
  Added metadata.xml

*cvsmenu-1.80 (02 Nov 2003)

  02 Nov 2003; Aron Griffis <agriffis@gentoo.org> cvsmenu-1.80.ebuild:
  Add cvsmenu plugin.  Thanks to Bret Towe in bug 32498 for the ebuild
