@@ -1,13 +1,13 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-vim/cvsmenu/cvsmenu-1.80.ebuild,v 1.7 2004/09/03 01:49:37 ciaranm Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-vim/cvsmenu/cvsmenu-1.80.ebuild,v 1.8 2004/10/26 11:47:14 slarti Exp $
 
 inherit vim-plugin
 
 DESCRIPTION="vim plugin: Menu for CVS-Versioncontrol"
 HOMEPAGE="http://www.vim.org/scripts/script.php?script_id=58"
 LICENSE="LGPL-2"
-KEYWORDS="alpha sparc x86 ia64 ~ppc"
+KEYWORDS="alpha sparc x86 ia64 ~ppc ~amd64"
 IUSE=""
 
 VIM_PLUGIN_HELPFILES="cvsmenu.txt"
