@@ -1,12 +1,12 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-vim/xsl/xsl-0.3.11.ebuild,v 1.8 2004/10/23 18:22:08 ciaranm Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-vim/xsl/xsl-0.3.11.ebuild,v 1.9 2004/10/26 11:49:31 slarti Exp $
 
 inherit vim-plugin
 
 DESCRIPTION="vim plugin: Syntax for XSLT (with HTML and others)"
 HOMEPAGE="http://www.vim.org/scripts/script.php?script_id=257"
 LICENSE="vim"
-KEYWORDS="x86 alpha ia64 sparc ~ppc"
+KEYWORDS="x86 alpha ia64 sparc ~ppc ~amd64"
 IUSE=""
 VIM_PLUGIN_HELPURI="http://www.vim.org/scripts/script.php?script_id=257"
