@@ -1,6 +1,9 @@
 # ChangeLog for app-vim/cvsmenu
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-vim/cvsmenu/ChangeLog,v 1.7 2004/09/03 01:49:37 ciaranm Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-vim/cvsmenu/ChangeLog,v 1.8 2004/10/26 11:47:14 slarti Exp $
+
+  26 Oct 2004; Tom Martin <slarti@gentoo.org> cvsmenu-1.80.ebuild:
+  Marked ~amd64.
 
   03 Sep 2004; Ciaran McCreesh <ciaranm@gentoo.org> cvsmenu-1.80.ebuild:
   Help text, bug #62559
